--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Khushali</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="" />
     <link rel="icon" href="favicon.ico ">
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Dancing+Script:wght@700&family=Josefin+Sans&family=Pacifico&display=swap" rel="stylesheet">
   </head>
